# blostma

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  scores.txt  wordlist.txt  wordlist_edit.py
blossom/: blossom.py  cli.py  engine.py  format.py  game.py  session.py  updater.py  utils.py
blostma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: gameScores.json  scores.json  settings.json  wordScores.json  wordlist.json
sample_data/: gameScores.json  settings.json  wordScores.json  wordlist.json
src/blostma/: blossom.py  cli.py  format.py  game.py  session.py  utils.py
src/blostma.egg-info/: SOURCES.txt  top_level.txt
