[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blostma"
version = "0.1.0"
description = "A CLI companion for Merriam-Webster's Blossom word game"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Mark Schachner"}
]
dependencies = [
  "scipy",
  "simple-term-menu"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["blostma*"]

[project.scripts]
    blostma = "blostma.cli:main"